# Takma

./: .gitignore  CHANGELOG.md  CNAME  README.md  card-details-read-only.html  index.html  manifest.json  package-lock.json  package.json  updateBuild.cjs  vite.config.ts
.github/workflows/: release.yml
Documentation/: BuildingTheProject.md  RunningTheProject.md  SettingUpTheProject.md
Documentation/Pictures/: TakmaBoardScreen_Quality90_Effort10.avif
assets/: index-045Lmk0R.js  index-7UFARq3-.js  index-B9Ft71Mf.css  index-BI2j9NWu.js  index-BNodLa_j.js  index-BcON3UE1.css  index-BfOUJ3j0.js  index-Bi3ZW5z6.css  index-BrL8y7O3.css  index-Bul8AQCS.css  index-C3L101hF.js  index-CBWoatYu.js  index-CIqUH-q9.js  index-CP6ypQUz.js  index-CfUiUuPj.js  index-CoofSpip.css  index-CpgY1aE9.js  index-D2nr6bSM.js  index-DCj2lJhH.js  index-DGcOiybm.js  index-DIccTvx6.css  index-DQitHZyq.js  index-DmskHtcW.js  index-Dsll7ht3.js  index-FjF8Maip.css  index-TELuH24Q.css  index-U0fztrri.css  index-UmQGKHWD.js  index-qZXB53cs.js  index-srdlVZiT.js  index-vBG2yWAz.css  main-3R9mZ_pK.js  main-BYfFXSX0.js  main-D42uJINp.js  main-DkrMMLt7.css  main-Dtv9wpCi.css  manifest-C-2DB2I-.json  manifest-D_XUUJtx.json
patches/: @schedule-x+calendar+3.4.2.patch
src/: App.svelte  mainCardDetailsReadOnly.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/resources/: LICENSE.txt
src-tauri/resources/backgrounds/: TheMoon-BathedDeep_SangonomiyaShrine_20250602091741LayeredCleaned_waifu2x_noise0_scale2xQuality70Effort10.avif  TheSacredForestInTheMoonlight_ChinjuForest_20250602084809Cleaned_waifu2x_noise0_scale2xQuality70Effort10.avif
src-tauri/src/: main.rs
src/components/: BoardButton.svelte  OptionsMenu.svelte  PopupWindow.svelte  WelcomeScreen.svelte
src/components/BoardScreen/: Attachments.svelte  BoardScreen.svelte  Card.svelte  CardDetails.svelte  CardDetailsReadOnly.svelte  CardOptionsMenu.svelte  CheckList.svelte  CheckLists.svelte  CreateNewCard.svelte  CreateNewList.svelte  DueDateChip.svelte  DueDatePopup.svelte  FilterCardsPopup.svelte  LabelsPopup.svelte  List.svelte  ListOptionsMenu.svelte  OrderChecklistsMenu.svelte
src/components/BoardScreen/Tiptap/: TakmaLink.svelte  TextEditorActionButtons.svelte  Tiptap.svelte
src/components/NavBar/: ChangeDisplayLanguageMenu.svelte  DeleteBoardButton.svelte  Filter.svelte  NavBar.svelte  OrderBoardsMenu.svelte  OrderListsMenu.svelte  SearchBar.svelte  SearchBox.svelte  ThemeToggleButton.svelte
src/components/WelcomeScreen/: BoardButton.svelte  BoardOptionsMenu.svelte  ChooseSaveLocationScreen.svelte  DueDatesOverviewPopup.svelte  NewBoardPopup.svelte  WelcomeScreen.svelte
src/scripts/: Board.ts  ClickOutside.js  Debounce.ts  GetImageUrl.ts  ImageUrl.ts  KnuthShuffle.js  Onboarding.ts  ResizeImg.js  ScaleDownImage.js  SearchText.ts  Stores.svelte.ts  StringExtensions.ts  TakmaDataFolderIO.ts  Thumbnail.worker.ts  ThumbnailGenerator.ts  coloris.js  easymde.min.js  highlight.min.js  stores.ts
src/scripts/I18n/: I18n.ts  Translation.ts  Translations.ts
src/scripts/SaveLoad/: SaveLoadManager.ts  TakmaData.ts
src/scripts/Tiptap/: TakmaLinkExtension.svelte.ts
src/scripts/Tiptap/Details/: details.d.ts  index.d.ts  index.js
src/scripts/Tiptap/Details/helpers/: findClosestVisibleNode.d.ts  isNodeVisible.d.ts  setGapCursor.d.ts
src/scripts/Tiptap/DetailsContent/: details-content.d.ts  index.d.ts  index.js
src/scripts/Tiptap/DetailsSummary/: details-summary.d.ts  index.d.ts  index.js
src/scripts/Tiptap/FileHandler/: FileHandlePlugin.d.ts  fileHandler.d.ts  index.d.ts  index.js  types.d.ts
src/stylesheets/: boardButtons.css  fonts.css  github-markdown.css  github-syntax-highlighting.min.css  styles.css
