[package]
name = "Takma"
version = "1.8.1"
description = "Takma is a Kanban-style productivity tool that empowers you to effectively manage your tasks and projects with ease."
authors = ["jam54"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Despite the `serde` and `serde_json` dependencies appearing as being unused, they
# should still be included here as they are used internally by Tauri. They are
# required because the `tauri::generate_context!` macro expands directly within
# our crate's scope and references them. Removing them results in the error
# "error[E0433]: cannot find `serde_json` in the crate root" being thrown.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
log = "0.4.33"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "z" # Optimize for binary size
strip = true # Remove debug symbols
